# asio-packet-framework

./: LICENSE  README.md
Everything/: CMakeLists.txt  CMakePresets.json
Everything/src/client/: CMakeLists.txt  client.cpp  ssl_client.cpp  ssl_client.hpp
Everything/src/client/resource/: CMakeLists.txt
Everything/src/common/: packet.hpp  packets_shared.cpp  packets_shared.hpp  platform.hpp  utilities.cpp  utilities.hpp
Everything/src/server/: CMakeLists.txt  server.cpp  ssl_server.cpp  ssl_server.hpp  ssl_session.cpp  ssl_session.hpp
Everything/src/server/resource/: test_file.txt
